removed img txt

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -13,9 +13,9 @@
    and collaboratively focused projects. Projects included:
  </p>
  <div class="row">
-   <a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon" class="one-third column"/>Backgammon</a>
-   <a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum" class="one-third column"/>Basic Forum</a>
-   <a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3.png" alt="Project 3 Meanstack App for MTGDeckBuilder" class="one-third column"/>Magic: The Gathering Deck Builder</a>
+   <a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon" class="one-third column"/></a>
+   <a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum" class="one-third column"/></a>
+   <a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3.png" alt="Project 3 Meanstack App for MTGDeckBuilder" class="one-third column"/></a>
 
    <p>
      If you are interesting in looking at any of my other work or in
