--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -17,8 +17,10 @@
    <a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum" class="one-third column"/></a>
    <a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3.png" alt="Project 3 Meanstack App for MTGDeckBuilder" class="one-third column"/></a>
 </div>
+<div>
    <p>
      If you are interesting in looking at any of my other work or in
      specific code for these project please feel to check out my
      <a href="https://github.com/Arcdeamonofire">Github</a>!
    </p>
+</div>
