Added thumbnail pic

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -4,7 +4,11 @@
 
  <br>
  <h2>My Work</h2>
- <h3><a href="Resume.pdf" target="_blank">My Resume</a></h3>
+ <div class="row">
+   <h3>My Resume</h3>
+   <a href="Resume.pdf" target="_blank"><img src="public/img/Resume.jpg" alt="My Resume" class="one-half column"/></a>
+ </div>
+
  <h3>Current: Web Development Immersive with General Assembly</h3>
  <p>
    Full­stack web development program focused on common best practices in
