added button element to resume link

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -5,7 +5,7 @@
  <br>
  <h2>My Work</h2>
  <div class="">
-   <h3><a href="Resume.pdf" target="_blank">My Resume</a></h3>
+   <h3><a href="Resume.pdf" target="_blank" class="button">My Resume</a></h3>
  </div>
 
  <h3>Current: Web Development Immersive with General Assembly</h3>
