--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -15,10 +15,10 @@
    test­-driven development. Developed a portfolio of individually focused
    and collaboratively focused projects. Projects included:
  </p>
- <div class="row">
-   <a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon" class="one-third column"/></a>
-   <a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum" class="one-third column"/></a>
-   <a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3-2.png" alt="Project 3 Meanstack App for MTGDeckBuilder" class="one-third column"/></a>
+ <div class="projects">
+   <div><a href="http://www.samuelweisse.com/project-1/"><img src="public/img/Project1.png" alt="Project 1 Backgammon"/></a></div>
+   <div><a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum"/></a></div>
+   <div><a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3-2.png" alt="Project 3 Meanstack App for MTGDeckBuilder"/></a></div>
 </div>
 <div>
    <p>
