--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -20,6 +20,8 @@
    <div><a href="https://secure-plains-44565.herokuapp.com/"><img src="public/img/Project2.png" alt="Project 2 Basic Forum"/></a></div>
    <div><a href="https://magicdeckbuilder.herokuapp.com/"><img src="public/img/Project3-2.png" alt="Project 3 Meanstack App for MTGDeckBuilder"/></a></div>
 </div>
+
+
 <div>
    <p>
      If you are interesting in looking at any of my other work or in
@@ -27,3 +29,8 @@
      <a href="https://github.com/Arcdeamonofire">Github</a>!
    </p>
 </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script type="text/javascript" src="public/js/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="public/slick/slick.min.js"></script>
+<script type="text/javascript" src="public/js/carousel.js">
