--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,8 @@ body {
   padding-top: 50px; // same as header height
 }
 
-img {
-  display:inline-block;
-  width: 30%;
+#projects .item img{
+    display: block;
+    width: 100%;
+    height: auto;
 }
