--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -13,6 +13,7 @@ nav {
   top:0;
   transition: top 0.2s ease-in-out;
   padding: 15px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
 }
 
 .nav-up {
