--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
   background: #F0F0F0;
   color: black;
-  padding-top: 50px; // same as header height
+  padding-top: 5em;
 }
 
 #projects .item img{
