--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -12,8 +12,9 @@ nav {
   width:100%;
   top:0;
   transition: top 0.2s ease-in-out;
-  padding: 15px;
+  padding: 2em;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+  z-index: 100;
 }
 
 .nav-up {
@@ -22,17 +23,23 @@ nav {
 
 #logo {
   float:left;
-  height: 20px;
-  width:auto;
+  color: #318ba0;
+  font-weight: bolder;
+  padding-bottom: 5px;
+}
+
+nav ul li a {
+    text-decoration: none;
 }
 
 nav ul li {
   display: inline;
   margin-right: 40px;
+
 }
 
 nav ul li:hover {
   cursor: pointer;
-  border-bottom: 1px solid black;
-  padding-bottom: 8px;
+  border-top: 2px solid #318ba2;
+  padding-top: 1em;
 }
