--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,6 +1,7 @@
-@media (min-width: 700px){
-  nav ul li {
-    display: none;
+@media (max-width: 700px){
+  nav ul li:hover {
+    cursor: pointer;
+    padding-top: 1em;
   }
 
 
