--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,7 +1,6 @@
 @media (max-width: 700px){
-  nav ul li:hover {
-    cursor: pointer;
-    padding-top: 1em;
+  nav ul li {
+    display: none;
   }
 
 
